syntax = "proto3";

option go_package = "serviceA/adapters/service_b";

service ServiceC {
  rpc CheckPhone(CheckPhoneRequest) returns (CheckPhoneResponse);
}

message CheckPhoneRequest {
  string phone = 1;
}

message CheckPhoneResponse {
  bool exists = 1;
}